# autotrain

./: .gitignore  2026-03-28-013801-this-session-is-being-continued-from-a-previous-co.txt  AGENTS.md  CHANGELOG.md  LICENSE  PLATFORM.md  README.md  TASK_STATUS.md  autotrain-overview.md  pyproject.toml
Users/grmim/Dev/platform/src/autotrain/core/: state_machine.py
docs/: RESEARCH_PORTFOLIO_OVERVIEW.md  autotrain-overview.html  autotrain-overview.md  project-overview.md
examples/yolo_vehicle/: autotrain.yaml  train.py
src/autotrain/: __init__.py  cli.py  daemon.py
src/autotrain/agent/: client.py  framework_detector.py  parser.py  prompt.py
src/autotrain/agent/templates/: program.md
src/autotrain/agent/templates/strategies/: generic.md  huggingface.md  keras.md  ultralytics.md
src/autotrain/config/: defaults.py  loader.py  schema.py
src/autotrain/core/: agent_loop.py  budget.py  recovery.py  state_machine.py
src/autotrain/dashboard/: agent_ws.py  api.py  control.py  models.py  serializers.py  server.py  ws.py
src/autotrain/dashboard/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
src/autotrain/dashboard/frontend/src/: App.tsx  main.tsx
src/autotrain/dashboard/frontend/src/api/: client.ts  types.ts
src/autotrain/dashboard/frontend/src/components/dashboard/: AgentReasoning.tsx  ArtifactsPanel.tsx  BudgetTracker.tsx  ConfigDrawer.tsx  GpuResources.tsx  IterationComparison.tsx  IterationTable.tsx  LogsPanel.tsx  MetricCards.tsx  MetricProgressChart.tsx  NewRunModal.tsx  TrainingCurves.tsx
src/autotrain/dashboard/frontend/src/components/layout/: Header.tsx  Sidebar.tsx
src/autotrain/dashboard/frontend/src/components/shared/: OutcomeBadge.tsx
src/autotrain/dashboard/frontend/src/hooks/: useRunDetail.ts  useRuns.ts  useWebSocket.ts
src/autotrain/dashboard/frontend/src/pages/: RunDashboard.tsx
src/autotrain/execution/: base.py  local.py  ssh.py
src/autotrain/experiment/: evaluator.py  git_ops.py  history.py  metrics.py  models.py  patch_validation.py  sandbox.py
src/autotrain/monitor/: app.py
src/autotrain/notify/: dispatcher.py  terminal.py  webhook.py
src/autotrain/remote_agent/: __main__.py  agent.py  collector.py  standalone.py  tailer.py
src/autotrain/storage/: db.py  models.py  queries.py
src/autotrain/util/: atomic.py  logging.py  signals.py
src/autotrain/watchdog/: gpu.py  health.py  monitor.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_atomic.py  test_budget.py  test_config.py  test_dashboard_api.py  test_dashboard_control.py  test_execution.py  test_git_ops.py  test_metrics.py  test_parser.py  test_patch_validation.py  test_sandbox.py  test_sandbox_atomic_apply.py  test_state_machine.py  test_storage.py
