[project]
name = "autotrain"
version = "0.1.0"
description = "Autonomous ML training platform for LLM-guided experiment loops on local or remote GPU infrastructure."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Ognjen Jovanovic" },
]
keywords = [
    "machine-learning",
    "llm",
    "agents",
    "mlops",
    "experiment-tracking",
    "hyperparameter-optimization",
    "gpu-training",
    "research-tooling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.50.0",
    "click>=8.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "requests>=2.31",
    "streamlit>=1.30",
    "plotly>=5.18",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13.0",
]

[project.urls]
Homepage = "https://github.com/h01t/autorun"
Repository = "https://github.com/h01t/autorun"
Issues = "https://github.com/h01t/autorun/issues"
Documentation = "https://github.com/h01t/autorun/blob/main/docs/project-overview.md"

[project.optional-dependencies]
remote-agent = ["nvidia-ml-py3>=7.352.0"]

[project.scripts]
autotrain = "autotrain.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autotrain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
]
